removed extra word 'available'

--- a/rpcforw_setkeys2.html
+++ b/rpcforw_setkeys2.html
@@ -12,7 +12,7 @@
         Not all keys will be available on a single event. The keys shown in an event depend on the type of event and its
         definition on the script or the managed configuration.
 
-        Below is a complete and up to date list of all the available keys available:<br><br>
+        Below is a complete and up to date list of all the available keys:<br><br>
     {% endblocktrans %}
         <br><br>
         <table>
