edited formatting with br tags

--- a/device_id_info.html
+++ b/device_id_info.html
@@ -2,6 +2,8 @@
 
 {% blocktrans %}
 
-IMEI of the device (15 digits) followed by the letter L. Example: 123412020491234L
+IMEI of the device (15 digits) followed by the letter L. 
+<br>
+Example: 123412020491234L
 
 {% endblocktrans %}
