--- a/event_time_info.html
+++ b/event_time_info.html
@@ -2,7 +2,8 @@
 
 {% blocktrans %}
 
-Time at which the event was generated. Format: YYYY-MM-DDThh:mm:ssTZD<br>
+Time at which the event was generated. <br>
+Format: YYYY-MM-DDThh:mm:ssTZD <br>
 		<i>Note that the "T" appears literally in the string,
 		to indicate the beginning of the time element, as specified in <a href="http://en.wikipedia.org/wiki/ISO_8601" target="blank_">ISO 8601</a>.</i>
 		<ul>
