--- a/code_info.html
+++ b/code_info.html
@@ -4,7 +4,7 @@
 
 This is the <b>Event Number</b> that the device generated. It varies depending on the configuration<br>
 Go to: <u>Gateway Administration</u> -> <u>Devices</u> -> Select a Device to see the configuration descriptions.
-<br><img src="http://i.imgur.com/pd4FmZJ.png" style="border:1px solid black" /></a>
+<br><img src="/../../static/img/code_info_example1.png" style="border:1px solid black" /></a>
 <br>
 For example, in the image above code 2 is Vehicle ON, code 4 is speeding, etc.
 
