updated - correct metric_value_info

--- a/metric_value_info.html
+++ b/metric_value_info.html
@@ -2,11 +2,6 @@
 
 {% blocktrans %}
 
-Number associated with the driving metrics <br>
-	<dl>					
-		<li>0 - Max. Acceleration</li>
-		<li>1 - Max. Deacceleration</li>
-		<li>2 - Max. Speed</li>
-	</dl>
+Actual driving metric value.
 
 {% endblocktrans %}
