Update metric_units_info with Max Speed info

--- a/metric_units_info.html
+++ b/metric_units_info.html
@@ -2,6 +2,7 @@
 
 {% blocktrans %}
 
-Driving metric units: Miles/(h*s) or MPH*s.
+Driving metric units: Miles/(h*s) or MPH*s for Max Acceleration/Max Deceleration.<br>
+MPH for Max Speed.
 
 {% endblocktrans %}
